Implement combat logging, bans, and tests all in one go (hopefully)